# aoc2021

./: .gitignore  LICENSE  README.md  pyproject.toml  solve
aoc/: solver.py
aoc/lib/: number.py  prime.py  sequence.py  util.py
aoc/solutions/day0/: b.py
aoc/solutions/day1/: a.py  b.py
aoc/solutions/day10/: a.py  b.py
aoc/solutions/day11/: a.py  b.py
aoc/solutions/day12/: a.py  b.py
aoc/solutions/day13/: a.py  b.py
aoc/solutions/day14/: a.py  b.py
aoc/solutions/day15/: a.py  b.py
aoc/solutions/day16/: a.py  b.py
aoc/solutions/day17/: a.py  b.py
aoc/solutions/day2/: a.py  b.py
aoc/solutions/day3/: a.py  b.py
aoc/solutions/day4/: a.py  b.py
aoc/solutions/day5/: a.py  b.py
aoc/solutions/day6/: a.py  b.py
aoc/solutions/day7/: a.py  b.py
aoc/solutions/day8/: a.py  b.py
aoc/solutions/day9/: a.py  b.py
